# event_frame

./: .gitmodules  CMakeLists.txt  Event.hpp  EventListener.hpp  EventProvider.hpp  ITicketTracker.hpp  Ticket.hpp  main.cpp
include/: Event.hpp  EventFrameConsumer.hpp  EventSpawner.hpp  EventTicket.hpp  EventsFrameProducer.hpp  Protected.hpp
include/event_frame/: EventChannel.hpp  EventFrame.hpp  EventFrameConsumer.hpp  EventFrameProducer.hpp  EventListener.hpp  EventPublisher.hpp  EventSpawner.hpp  EventSubscriber.hpp  EventTicket.hpp  EventsFrameProducer.hpp
src/event_frame/: EventChannel.cpp  EventSpawner.cpp
